@@ -46,7 +46,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
 
     @Test
     public void testBuildForEmptyPrincipals() {
-        assertTrue(permissionCacheBuilder.init(ImmutableSet.of(), createStrategy(Long.MAX_VALUE, 2, false)));
+        assertTrue(permissionCacheBuilder.init(Set.of(), createStrategy(Long.MAX_VALUE, 2, false)));
         PermissionCache cache = permissionCacheBuilder.build();
         assertEquals(EMPTY_CLASS_NAME, cache.getClass().getName());
 
@@ -178,7 +178,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
         when(store.getNumEntries("a", maxSize)).thenReturn(NumEntries.valueOf(1, true));
         when(store.getNumEntries("b", maxSize)).thenReturn(NumEntries.valueOf(maxPaths+1, true));
 
-        Set<String> principalNames = Sets.newLinkedHashSet(ImmutableSet.of("a", "b"));
+        Set<String> principalNames = Sets.newLinkedHashSet(Set.of("a", "b"));
         assertFalse(permissionCacheBuilder.init(principalNames, createStrategy(maxSize, maxPaths, false)));
 
         PermissionCache cache = permissionCacheBuilder.build();
@@ -204,7 +204,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
         when(store.getNumEntries("a", maxSize)).thenReturn(NumEntries.valueOf(maxPaths+1, true));
         when(store.getNumEntries("b", maxSize)).thenReturn(NumEntries.valueOf(maxPaths+1, false));
 
-        Set<String> principalNames = Sets.newLinkedHashSet(ImmutableSet.of("a", "b"));
+        Set<String> principalNames = Sets.newLinkedHashSet(Set.of("a", "b"));
         assertFalse(permissionCacheBuilder.init(principalNames, createStrategy(maxSize, maxPaths, false)));
 
         PermissionCache cache = permissionCacheBuilder.build();
@@ -220,7 +220,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
         long maxPaths = 2;
         when(store.getNumEntries(anyString(), anyLong())).thenReturn(NumEntries.valueOf(maxPaths+1, true));
 
-        assertFalse(permissionCacheBuilder.init(ImmutableSet.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, maxPaths, false)));
+        assertFalse(permissionCacheBuilder.init(Set.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, maxPaths, false)));
 
         verify(store, times(3)).getNumEntries(anyString(), anyLong());
         verify(store, never()).load(anyString());
@@ -232,7 +232,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
         long maxPaths = 5;
         when(store.getNumEntries(anyString(), anyLong())).thenReturn(NumEntries.valueOf(maxPaths+1, false));
 
-        assertFalse(permissionCacheBuilder.init(ImmutableSet.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, maxPaths, false)));
+        assertFalse(permissionCacheBuilder.init(Set.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, maxPaths, false)));
 
         verify(store, times(3)).getNumEntries(anyString(), anyLong());
         verify(store, never()).load(anyString());
@@ -243,7 +243,7 @@ public class PermissionCacheBuilderTest extends AbstractCacheTest {
     public void testInitNumEntriesExceedsMaxLong() {
         when(store.getNumEntries(anyString(), anyLong())).thenReturn(NumEntries.valueOf(Long.MAX_VALUE, false));
 
-        assertFalse(permissionCacheBuilder.init(ImmutableSet.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, 25, false)));
+        assertFalse(permissionCacheBuilder.init(Set.of("a", "b", "c"), createStrategy(Long.MAX_VALUE, 25, false)));
 
         verify(store, times(3)).getNumEntries(anyString(), anyLong());
         verify(store, never()).load(anyString());
